--- a/server/nexus-centos/nginx.conf
+++ b/server/nexus-centos/nginx.conf
@@ -46,10 +46,9 @@ http {
         listen [::]:443 ssl http2;
         server_name nexus.local.l-its.de;
 
-        ssl_certificate           /etc/nginx/cert.crt;
-        ssl_certificate_key       /etc/nginx/cert.key;
+        ssl_certificate           /etc/nginx/private/cert.crt;
+        ssl_certificate_key       /etc/nginx/private/cert.key;
 
-        ssl on;
         ssl_session_cache  builtin:1000  shared:SSL:10m;
         ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
