--- a/server/nexus-centos/nginx.conf
+++ b/server/nexus-centos/nginx.conf
@@ -44,13 +44,13 @@ http {
     server {
         listen 443 ssl http2;
         listen [::]:443 ssl http2;
-        server_name nexus.local.l-its.de;
+        server_name nexus.l-its.de;
 
         ssl_certificate           /etc/nginx/private/cert.crt;
         ssl_certificate_key       /etc/nginx/private/cert.key;
 
         ssl_session_cache  builtin:1000  shared:SSL:10m;
-        ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+        ssl_protocols  TLSv1.3;
         ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
         ssl_prefer_server_ciphers on;
 
@@ -65,7 +65,7 @@ http {
             proxy_pass          http://localhost:8081;
             proxy_read_timeout  90;
 
-            proxy_redirect http://localhost:8081 nexus.local.l-its.de;
+            proxy_redirect http://localhost:8081 nexus.l-its.de;
         }
     }
 }
