--- a/server/nexus-centos/nginx.conf
+++ b/server/nexus-centos/nginx.conf
@@ -68,4 +68,31 @@ http {
             proxy_redirect http://localhost:8081 nexus.l-its.de;
         }
     }
+    server {
+        listen 443 ssl http2;
+        listen [::]:443 ssl http2;
+        server_name docker-registry.l-its.de;
+
+        ssl_certificate           /etc/nginx/private/cert.crt;
+        ssl_certificate_key       /etc/nginx/private/cert.key;
+
+        ssl_session_cache  builtin:1000  shared:SSL:10m;
+        ssl_protocols  TLSv1.3;
+        ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+        ssl_prefer_server_ciphers on;
+
+        access_log /var/log/nginx/nexus.access.log;
+
+        location / {
+            proxy_set_header        Host $host;
+            proxy_set_header        X-Real-IP $remote_addr;
+            proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header        X-Forwarded-Proto $scheme;
+            # Fix the “It appears that your reverse proxy set up is broken" error.
+            proxy_pass          http://localhost:8082;
+            proxy_read_timeout  90;
+
+            proxy_redirect http://localhost:8082 docker-registry.l-its.de;
+        }
+    }
 }
